Bug 1291296 - Make it possible to change a PersistentBufferProvider's Forwarder without crashing. r=ethlin, a=ritu

--HG--
extra : source : d59fd1ff4bec47d4f49e9ce4edc210b9548aab0c